// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default state 1`] = `
{
  "error": Map {},
  "rates": Map {},
  "status": Map {},
}
`;

exports[`from fetch error to fetch request 1`] = `
{
  "error": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => [Error: Opps!],
  },
  "rates": Map {},
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 2,
  },
}
`;

exports[`from fetch error to fetch request 2`] = `
{
  "error": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => [Error: Opps!],
  },
  "rates": Map {},
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 1,
  },
}
`;

exports[`from fetch request to fetch error 1`] = `
{
  "error": Map {},
  "rates": Map {},
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 1,
  },
}
`;

exports[`from fetch request to fetch error 2`] = `
{
  "error": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => [Error: Opps!],
  },
  "rates": Map {},
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 2,
  },
}
`;

exports[`from fetch request to fetch success 1`] = `
{
  "error": Map {},
  "rates": Map {},
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 1,
  },
}
`;

exports[`from fetch request to fetch success 2`] = `
{
  "error": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => null,
  },
  "rates": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => {
      "count": 2,
      "data": [
        {
          "name": "Cost Management OpenShift Cost Model",
          "rates": [
            {
              "metric": {
                "label_measurement": "Request",
                "label_measurement_unit": "GB-months",
                "label_metric": "Storage",
                "name": "storage_gb_request_per_month",
              },
              "tiered_rates": [
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": null,
                    "usage_start": null,
                  },
                  "value": 0.25,
                },
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": 1120,
                    "usage_start": 500,
                  },
                  "value": 0.25,
                },
              ],
            },
          ],
          "sources": [
            {
              "name": "provider-1",
              "uuid": "92e9b353-100e-4e38-91bd-e0143f766130",
            },
            {
              "name": "provider-2",
              "uuid": "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d",
            },
          ],
        },
        {
          "name": "Another cost model",
          "rates": [
            {
              "metric": {
                "label_measurement": "Request",
                "label_measurement_unit": "core-hours",
                "label_metric": "CPU",
                "name": "cpu_core_request_per_hour",
              },
              "tiered_rates": [
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "core-hours",
                    "usage_end": 5,
                    "usage_start": null,
                  },
                  "value": 0.2,
                },
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": null,
                    "usage_start": 3,
                  },
                  "value": 0.25,
                },
              ],
            },
          ],
          "sources": [
            {
              "name": "provider-1",
              "uuid": "92e9b353-100e-4e38-91bd-e0143f766130",
            },
          ],
        },
      ],
      "first": "link1",
      "last": "link2",
      "next": "link2",
      "previous": null,
      "timeRequested": "time",
    },
  },
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 2,
  },
}
`;

exports[`from fetch success to fetch request 1`] = `
{
  "error": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => null,
  },
  "rates": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => {
      "count": 2,
      "data": [
        {
          "name": "Cost Management OpenShift Cost Model",
          "rates": [
            {
              "metric": {
                "label_measurement": "Request",
                "label_measurement_unit": "GB-months",
                "label_metric": "Storage",
                "name": "storage_gb_request_per_month",
              },
              "tiered_rates": [
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": null,
                    "usage_start": null,
                  },
                  "value": 0.25,
                },
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": 1120,
                    "usage_start": 500,
                  },
                  "value": 0.25,
                },
              ],
            },
          ],
          "sources": [
            {
              "name": "provider-1",
              "uuid": "92e9b353-100e-4e38-91bd-e0143f766130",
            },
            {
              "name": "provider-2",
              "uuid": "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d",
            },
          ],
        },
        {
          "name": "Another cost model",
          "rates": [
            {
              "metric": {
                "label_measurement": "Request",
                "label_measurement_unit": "core-hours",
                "label_metric": "CPU",
                "name": "cpu_core_request_per_hour",
              },
              "tiered_rates": [
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "core-hours",
                    "usage_end": 5,
                    "usage_start": null,
                  },
                  "value": 0.2,
                },
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": null,
                    "usage_start": 3,
                  },
                  "value": 0.25,
                },
              ],
            },
          ],
          "sources": [
            {
              "name": "provider-1",
              "uuid": "92e9b353-100e-4e38-91bd-e0143f766130",
            },
          ],
        },
      ],
      "first": "link1",
      "last": "link2",
      "next": "link2",
      "previous": null,
      "timeRequested": "time",
    },
  },
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 2,
  },
}
`;

exports[`from fetch success to fetch request 2`] = `
{
  "error": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => null,
  },
  "rates": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => {
      "count": 2,
      "data": [
        {
          "name": "Cost Management OpenShift Cost Model",
          "rates": [
            {
              "metric": {
                "label_measurement": "Request",
                "label_measurement_unit": "GB-months",
                "label_metric": "Storage",
                "name": "storage_gb_request_per_month",
              },
              "tiered_rates": [
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": null,
                    "usage_start": null,
                  },
                  "value": 0.25,
                },
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": 1120,
                    "usage_start": 500,
                  },
                  "value": 0.25,
                },
              ],
            },
          ],
          "sources": [
            {
              "name": "provider-1",
              "uuid": "92e9b353-100e-4e38-91bd-e0143f766130",
            },
            {
              "name": "provider-2",
              "uuid": "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d",
            },
          ],
        },
        {
          "name": "Another cost model",
          "rates": [
            {
              "metric": {
                "label_measurement": "Request",
                "label_measurement_unit": "core-hours",
                "label_metric": "CPU",
                "name": "cpu_core_request_per_hour",
              },
              "tiered_rates": [
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "core-hours",
                    "usage_end": 5,
                    "usage_start": null,
                  },
                  "value": 0.2,
                },
                {
                  "unit": "USD",
                  "usage": {
                    "unit": "GB-months",
                    "usage_end": null,
                    "usage_start": 3,
                  },
                  "value": 0.25,
                },
              ],
            },
          ],
          "sources": [
            {
              "name": "provider-1",
              "uuid": "92e9b353-100e-4e38-91bd-e0143f766130",
            },
          ],
        },
      ],
      "first": "link1",
      "last": "link2",
      "next": "link2",
      "previous": null,
      "timeRequested": "time",
    },
  },
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 1,
  },
}
`;

exports[`from init to fetch request 1`] = `
{
  "error": Map {},
  "rates": Map {},
  "status": Map {},
}
`;

exports[`from init to fetch request 2`] = `
{
  "error": Map {},
  "rates": Map {},
  "status": Map {
    "92e9b353-100e-4e38-91bd-e0143f766130" => 1,
  },
}
`;

exports[`rateFlatter flats tiers into array 1`] = `
[
  {
    "display": "storage request rate",
    "index": 0,
    "metric_type": "storage_gb_request_per_month",
    "period": "months",
    "range_unit": "GB",
    "range_value": [
      null,
      null,
    ],
    "source_uuids": [
      "92e9b353-100e-4e38-91bd-e0143f766130",
      "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d",
    ],
    "value": 0.25,
    "value_unit": "USD",
  },
]
`;

exports[`rateFlatter flats tiers into array 2`] = `
[
  {
    "display": "cpu request rate",
    "index": 0,
    "metric_type": "cpu_core_request_per_hour",
    "period": "hours",
    "range_unit": "core",
    "range_value": [
      null,
      5,
    ],
    "source_uuids": [
      "92e9b353-100e-4e38-91bd-e0143f766130",
    ],
    "value": 0.2,
    "value_unit": "USD",
  },
]
`;

exports[`ratesPerProvider selector returns rates array by provider_uuid 1`] = `
{
  "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d": [
    {
      "display": "storage request rate",
      "index": 0,
      "metric_type": "storage_gb_request_per_month",
      "period": "months",
      "range_unit": "GB",
      "range_value": [
        null,
        null,
      ],
      "source_uuids": [
        "92e9b353-100e-4e38-91bd-e0143f766130",
        "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d",
      ],
      "value": 0.25,
      "value_unit": "USD",
    },
  ],
  "92e9b353-100e-4e38-91bd-e0143f766130": [
    {
      "display": "storage request rate",
      "index": 0,
      "metric_type": "storage_gb_request_per_month",
      "period": "months",
      "range_unit": "GB",
      "range_value": [
        null,
        null,
      ],
      "source_uuids": [
        "92e9b353-100e-4e38-91bd-e0143f766130",
        "7fb3bbfb-79d2-4bf7-bd80-ec2bd665887d",
      ],
      "value": 0.25,
      "value_unit": "USD",
    },
    {
      "display": "cpu request rate",
      "index": 0,
      "metric_type": "cpu_core_request_per_hour",
      "period": "hours",
      "range_unit": "core",
      "range_value": [
        null,
        5,
      ],
      "source_uuids": [
        "92e9b353-100e-4e38-91bd-e0143f766130",
      ],
      "value": 0.2,
      "value_unit": "USD",
    },
  ],
}
`;
